# tessdb-tools

./: ISSUE.md  README.md  justfile  pyproject.toml
scripts/tools/: auto-apply-sql  create-sql-indexes  delete-sql-indexes  fast-apply-sql  manual-repaired-location-fixes  tessdb-pause  tessdb-resume
src/tessdb/tools/: __init__.py  adhoc.py  crossdb.py  dbutils.py  forms.py  idadb.py  location.py  mongodb.py  tessdb.py  utils.py  zptess.py
src/tessdb/tools/templates/: sql-fix-absurd-zp.j2  sql-phot-new-locations.j2  sql-phot-upd-locations-metadata.j2  sql-phot-upd-locations.j2  sql-phot-upd-mac.j2  sql-phot-upd-readings-locations.j2
